--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test:unit": "mocha -u tdd 'tests/unit/*.js'",
     "test:ui": "npx playwright test",
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js "
   },
   "keywords": [],
   "author": "",
